# sg10-kaggle-segmenting-living-organisms

./: .gitignore  README.md  config.yaml  config2.yaml  configB3.yaml  configDeepLab_SegFormer.yaml  configEfficient.yaml  configRegNetY.yaml  configTransfo.yaml  configbest.yaml  ensemble.yaml  inference.yaml  pyproject.toml  setup.py  submit-slurm.py
docs/: config_inference_example.yml  config_train_continue_example.yml  config_train_example.yml
torchtmpl/: __init__.py  encoder.py  losses.py  main.py  optim.py  patch.py  utils.py
torchtmpl/data/: PlanktonDataset.py  __init__.py  __main__.py  dataloader.py  encoder.py  patch.py  planktonds.py  submission.py  test_transform.py  transformations.py  visualization.py
torchtmpl/models/: __init__.py  __main__.py  base_models.py  cnn_models.py  efficientnet_b3_segmentation.py  smp_models.py  torch_segformer.py  torch_unet.py  unet.py
torchtmpl/optim/: __init__.py  bce_loss.py  focal_tversky_loss.py  tversky_bce_loss.py  tversky_loss.py
torchtmpl/utils/: __init__.py  model_checkpoint.py  sub_utils.py  test_utils.py  train_continue_utils.py  train_utils.py
train_yaml/: config.yaml  configEfficientB4.yaml  configEfficientB4_20epochs.yaml  configEfficientB4_light-optimal+elastic.yaml  configEfficientB4_test_conservative.yaml  configEfficientB4_test_extreme.yaml  configEfficientB4_test_moderate.yaml  configEfficientB5.yaml  configMITb2.yaml  configRegNetY.yaml  configSwin.yaml  configbest.yaml
yaml/: config.yaml  configEfficientB4.yaml  configEfficientB4_20epochs.yaml  configEfficientB5.yaml  configMITb2.yaml  configRegNetY.yaml  configSwin.yaml  configbest.yaml
