[project]
name = "torchtmpl"
version = "0.0.1"

dependencies = [
    "PyYAML>=6.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchinfo>=1.8.0",
    "wandb>=0.15.0",
    "scipy>=1.11.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.8.0",
    "timm>=0.9.2",
    "scikit-learn>=1.2.2",
    "albumentations",
    "segmentation-models-pytorch>=0.3.2",
    "kaggle>=1.6.17",
    "ttach"
]

[options]
package_dir = "torchtmpl"
